@@ -274,7 +274,15 @@ Calls the L<opendir|SPVM::Sys::IO/"opendir"> method in the L<Sys::Socket|SPVM::S
 
 The return value is set to $dh_ref->[0].
 
-If succeed, returns a true value.
+If succeed, returns 1. Otherwise returns 0.
+
+=head2 closedir
+
+  static method closedir : int ($dirp : Sys::IO::DirStream);
+
+Calls the L<opendir|SPVM::Sys::IO/"opendir"> method in the L<Sys::Socket|SPVM::Sys::Socket> class.
+
+If succeed, returns 1. Otherwise returns 0.
 
 =head2 unlink
 
