@@ -16,6 +16,7 @@
       +  method sa_family : int ();
     
     * The following methods are added to the Sys class.
+      + static method closedir : int ($dirp : Sys::IO::DirStream);
       +  static method opendir : int ($dh_ref : Sys::IO::DirStream[], $dir : string);
       +  static method bind : int ($sockfd : int, $addr : Sys::Socket::Sockaddr);
       +  static method listen : int ($sockfd : int, $backlog : int);
